--- a/src/components/CopyContainer.css
+++ b/src/components/CopyContainer.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    display: block;
 }
 
 .warn {
@@ -32,6 +33,12 @@
     animation: disappearingBorder;
     animation-duration: 3000ms;
     animation-timing-function: linear;
+}
+
+.no-items {
+    width: 100%;
+    text-align: center;
+    margin: 0.5em 0;
 }
 
 @keyframes disappearingBorder {
